--- a/Linux/CMakeLists.txt
+++ b/Linux/CMakeLists.txt
@@ -7,10 +7,11 @@ project(OpenSiv3D_Linux
     DESCRIPTION "A C++20 framework for creative coding (2D/3D games, media art, visualizers, and simulators)."
 )
 
+
 # Find required packages
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(SIV3D_THIRD_PARTY REQUIRED alsa libavcodec libavformat libavutil libcurl freetype2 gl glib-2.0 gtk+-3.0 harfbuzz libmpg123 ogg opencv4 opus opusfile libpng soundtouch libswresample libtiff-4 libturbojpeg uuid vorbis vorbisenc vorbisfile libwebp x11 glu xft zlib)
-
+#find_package(Boost 1.71.0...1.74.0 REQUIRED)
 find_package(Boost 1.74.0 EXACT REQUIRED)
 message(STATUS "[info] Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
 message(STATUS "[info] SIV3D_THIRD_PARTY_INCLUDE_DIRS: ${SIV3D_THIRD_PARTY_INCLUDE_DIRS}")
